Ignore platform-specific redis files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 log/*
 tmp/*
 pids/*
+redis*/00-RELEASENOTES
+redis*/*.o
+redis*/*.rdb
+redis*/*.log
+redis*/redis-cli
+redis*/redis-server
+redis*/redis-benchmark
+redis*/redis-check-dump
+redis*/redis-check-aof
+redis*/doc-tools
+redis*/mkrelease.sh
+redis*/release
+redis*/myredis.conf
+redis*/misc/*
+redis*/release.h
